fix latex formulas in new examples

--- a/docs/source/examples/fmu_model_exchange_bouncing_ball.ipynb
+++ b/docs/source/examples/fmu_model_exchange_bouncing_ball.ipynb
@@ -21,10 +21,8 @@
     "\n",
     "The bouncing ball combines continuous dynamics with discrete events:\n",
     "\n",
-    "1277\\frac{dh}{dt} = v1277",
-    "\n",
-    "1277\\frac{dv}{dt} = g1277",
-    "\n",
+    "$$\\frac{dh}{dt} = v$$\n",
+    "$$\\frac{dv}{dt} = g$$\n",
     "\n",
     "where $h$ is height, $v$ is velocity, and $g = -9.81\\,\\text{m/s}^2$. At impact ($h = 0$), velocity reverses with energy loss: $v^+ = -e \\cdot v^-$ where $e \\in [0,1]$ is the restitution coefficient."
    ]
@@ -192,7 +190,7 @@
     ")\n",
     "\n",
     "# Run simulation\n",
-    "sim.run(5.0)"
+    "sim.run(4.0)"
    ]
   },
   {
