--- a/docs/source/examples/fmu_model_exchange_vanderpol.ipynb
+++ b/docs/source/examples/fmu_model_exchange_vanderpol.ipynb
@@ -11,21 +11,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# FMU ME: Van der Pol\n",
     "\n",
     "This example demonstrates **Model Exchange FMU** integration with a nonlinear oscillator. The Van der Pol equation exhibits self-sustained oscillations:\n",
     "\n",
-    "112\\ddot{x} - \\mu(1 - x^2)\\dot{x} + x = 0112",
+    "\n",
+    "$$\\ddot{x} - \\mu(1 - x^2)\\dot{x} + x = 0$$\n",
     "\n",
     "\n",
-    "where $\\mu > 0$ controls nonlinearity. As a first-order system:\\n",
+    "where $\\mu > 0$ controls nonlinearity. As a first-order system:\n",
     "\n",
-    "112\\frac{dx_0}{dt} = x_1112",
-    "\n",
-    "112\\frac{dx_1}{dt} = \\mu(1 - x_0^2)x_1 - x_0112",
-    "\n",
+    "$$\\frac{dx_0}{dt} = x_1$$\n",
+    "$$\\frac{dx_1}{dt} = \\mu(1 - x_0^2)x_1 - x_0$$\n",
     "\n",
     "You can also find the FMU integration tests in the [GitHub repository](https://github.com/milanofthe/pathsim/blob/master/tests/evals/)."
    ]
@@ -33,7 +38,12 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "editable": true,
+    "raw_mimetype": "text/restructuredtext",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "source": [
     "This example demonstrates the :class:`.ModelExchangeFMU` block with purely continuous-time dynamics (no events), showcasing PathSim's adaptive integration for nonlinear systems."
@@ -166,7 +176,12 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "editable": true,
+    "raw_mimetype": "text/restructuredtext",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "source": [
     "We use a high-order adaptive solver (:class:`.RKDP54`) for accurate nonlinear integration."
@@ -298,13 +313,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
